Updated ca (new translator)

--- a/CustomRPC/MainForm.ca.resx
+++ b/CustomRPC/MainForm.ca.resx
@@ -158,7 +158,7 @@
     <value>53, 20</value>
   </data>
   <data name="fileToolStripMenuItem.Text" xml:space="preserve">
-    <value>Fitxers</value>
+    <value>Fitxer</value>
   </data>
   <data name="loadPresetToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>240, 22</value>
