--- a/CustomRPC/MainForm.ar.resx
+++ b/CustomRPC/MainForm.ar.resx
@@ -173,7 +173,7 @@
     <value>222, 22</value>
   </data>
   <data name="uploadAssetsToolStripMenuItem.Text" xml:space="preserve">
-    <value>رفع الأصول</value>
+    <value>رفع الملف</value>
   </data>
   <data name="toolStripSeparatorFile2.Size" type="System.Drawing.Size, System.Drawing">
     <value>219, 6</value>
@@ -182,7 +182,7 @@
     <value>222, 22</value>
   </data>
   <data name="quitToolStripMenuItem.Text" xml:space="preserve">
-    <value>خروج</value>
+    <value>اطلع</value>
   </data>
   <data name="fileToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>42, 20</value>
