Updates es (new translator)

--- a/CustomRPC/MainForm.es.resx
+++ b/CustomRPC/MainForm.es.resx
@@ -179,7 +179,7 @@
     <value>221, 22</value>
   </data>
   <data name="startMinimizedToolStripMenuItem.Text" xml:space="preserve">
-    <value>Minimizar al inicio</value>
+    <value>Iniciar minimizado</value>
   </data>
   <data name="autoconnectToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>221, 22</value>
@@ -242,7 +242,7 @@
     <value>203, 22</value>
   </data>
   <data name="openTheManualToolStripMenuItem.Text" xml:space="preserve">
-    <value>Abre la guía</value>
+    <value>Abrir la guía</value>
   </data>
   <data name="gitHubPageToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>203, 22</value>
